ensure z-index > than page on tooltip

--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -556,6 +556,7 @@ a {
 .tooltip {
   position: absolute;
   top: 135px;
+  z-index: 3;
 
   .count {
     border-bottom: 1px solid $white;
